tests/neg-macros/i18677-b/Test_2.scala
//> using -expermiental

@extendFoo
class AFoo // error